# pastel-hn

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  Taskfile.yml  build.zig  build.zig.zon
docs/rationale/: 0001_removing_zig_wasm_layer.md  0002_rust_api_layer.md  0003_tabbed_story_detail_with_reader_mode.md  0004_error_handling_pattern.md  0005_ui_design_system.md  0006_copilot_ai_assistant.md  0007_export_download_fix.md  0008_rust_backend_tts_piper.md  0008_rust_backend_tts_xtts_v2.md  0009_tts_sentence_highlighting.md  0010_youtube_video_embed_support.md
src/: json.zig  main.zig  types.zig  urls.zig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  copilot.rs  main.rs  tts.rs  types.rs
src-tauri/src/tts/: mod.rs
src-tauri/src/tts/neural/: audio.rs  mod.rs  model.rs  synth.rs
web/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: accessibility.spec.ts  app.spec.ts  neural-tts.spec.ts  performance.spec.ts  visual.spec.ts
web/src/: accessibility.test.ts  accessibility.ts  animations.test.ts  animations.ts  api.test.ts  api.ts  assistant-ui.test.ts  assistant-ui.ts  back-to-top.test.ts  back-to-top.ts  copilot-client.test.ts  copilot-client.ts  deep-link.test.ts  deep-link.ts  duplicates.test.ts  duplicates.ts  error-boundary.test.ts  error-boundary.ts  errors.test.ts  errors.ts  favicon.test.ts  favicon.ts  feature-flags.ts  focus-trap.ts  follow-polling.test.ts  follow-polling.ts  global-shortcuts.test.ts  global-shortcuts.ts  help-modal.test.ts  help-modal.ts  icons.ts  keyboard.test.ts  keyboard.ts  main.ts  navigation.test.ts  navigation.ts  notifications.test.ts  notifications.ts  offline.test.ts  offline.ts  (+43 more)
web/src/styles/: main.css
