[package]
name = "pastel-hn"
version = "0.9.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-window-state = "2.4.1"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "rustls"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# In-memory cache with TTL
moka = { version = "0.12.12", features = ["future"] }

# Open URLs
open = "5.3.3"

# Utilities
futures = "0.3.31"
urlencoding = "2.1.3"
url = "2.5.8"

# Copilot SDK for AI assistant
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust.git", branch = "main" }
once_cell = "1.21.3"

# Article content extraction
readability = "0.3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
