[package]
name = "pastel-hn"
version = "0.17.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.4"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "rustls", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# In-memory cache with TTL
moka = { version = "0.12.12", features = ["future"] }

# Open URLs
open = "5.3.3"

# Utilities
futures = "0.3.31"
urlencoding = "2.1.3"
url = "2.5.8"

# Copilot SDK for AI assistant
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust.git", branch = "main" }
once_cell = "1.21.3"

# Article content extraction
readability = "0.3.0"

# Text-to-speech (native OS voices)
tts = "0.26.3"

# Neural TTS (Piper + ONNX Runtime)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "download-binaries", "tls-rustls"] }
ndarray = "0.17.2"
rodio = { version = "0.21.1", default-features = false, features = ["wav", "playback"] }
hound = "3.5.1"

# Model management
dirs = "6.0.0"
regex = "1.12.2"

# Tauri plugins
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-deep-link = "2.4.6"
tauri-plugin-localhost = "2.3.2"

# Port picker for localhost plugin
portpicker = "0.1.1"

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
